complete layout of about page

--- a/about.html
+++ b/about.html
@@ -83,51 +83,65 @@
                 <a href="#home-about-section"><i class="bi bi-chevron-double-down"></i></a>
             </div>
         </section>
-        <h3 class="pt-5 text-center">
+        <h3 id="about-page-text" class="pt-5 text-center pb-5 offset-md-3 offset-1 col-10 col-md-6">
             Just north of Dublin, Swords combines historic charm with modern energy. Explore Swords Castle, scenic
             parks, and vibrant local culture—an ideal gateway to North County Dublin.
         </h3>
         <div class="row justify-content-center">
-                <div class="col-9 col-md-4 mb-5">
-                    <div class="card bg-dark text-white">
-                        <img src="..." class="card-img" alt="...">
-                        <div class="card-img-overlay">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p class="card-text">Last updated 3 mins ago</p>
-                        </div>
+            <div class="d-flex justify-content-center col-9 col-md-4 mb-5">
+                <div class="about-card card bg-dark text-white">
+                    <img src="assets/images/thumbnail-placeholder-.jpg" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <p class="card-text">Last updated 3 mins ago</p>
                     </div>
                 </div>
-                <div class="col-9 col-md-4 mb-5">
-                    <div class="card bg-dark text-white">
-                        <img src="..." class="card-img" alt="...">
-                        <div class="card-img-overlay">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p class="card-text">Last updated 3 mins ago</p>
-                        </div>
+            </div>
+            <div class="d-flex justify-content-center col-9 col-md-4 mb-5">
+                <div class="about-card card bg-dark text-white">
+                    <img src="assets/images/thumbnail-placeholder-.jpg" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <p class="card-text">Last updated 3 mins ago</p>
                     </div>
                 </div>
-                <div class="col-9 col-md-4 mb-5">
-                    <div class="card bg-dark text-white">
-                        <img src="..." class="card-img" alt="...">
-                        <div class="card-img-overlay">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p class="card-text">Last updated 3 mins ago</p>
-                        </div>
+            </div>
+            <div class="d-flex justify-content-center col-9 col-md-4 mb-5">
+                <div class="about-card card bg-dark text-white">
+                    <img src="assets/images/thumbnail-placeholder-.jpg" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <p class="card-text">Last updated 3 mins ago</p>
                     </div>
                 </div>
             </div>
         </div>
-        <section>
 
+
+        <section>
+            <div class="d-flex justify-content-center">
+                <h1>A heading about Swords</h1>
+            </div>
+            
+            <h3 id="about-page-text" class="pt-5 text-center pb-5 offset-md-1.5 offset-1 col-10 col-md-9">
+                Over the past century, Swords has evolved from a small village with medieval roots into one of Ireland’s
+                fastest-growing urban areas. Once a modest rural settlement, Swords began expanding in the 20th century,
+                spurred by Dublin’s suburban growth and the development of Dublin Airport nearby. This strategic
+                location attracted businesses, residential developments, and improved infrastructure, turning Swords
+                into a bustling hub while preserving its historic landmarks. Today, Swords boasts a unique blend of
+                modern amenities and cultural heritage sites like Swords Castle and the ancient Round Tower, allowing
+                visitors to experience both the past and present. Its lively community, vibrant shopping areas, and
+                scenic parks make Swords a remarkable destination and a welcoming gateway to North County Dublin.
+            </h3>
         </section>
 
-        <section>
+        <section id="about-footer-image">
 
         </section>
 
