--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <section id="home-about-section" class="text-center">
             <h1 id="home-about-heading">About Swords</h1>
-            <p id="home-about-p" class="col-lg-6 offset-lg-3 col-md-9 mt-3">
+            <p id="home-about-p" class="offset-md-3 offset-1 col-10 col-md-6 mt-3">
                 Nestled just north of Dublin, Swords combines historic charm with a lively, modern spirit. From the
                 impressive Swords Castle to bustling local markets and scenic green spaces, this vibrant town offers a
                 unique mix of history, culture, and community. Perfect for day-trippers and explorers alike, Swords is
@@ -141,7 +141,7 @@
             <h1 class="mt-3">Contact</h1>
             <form id="home-contact-form">
                 <div id="home-contact-form-inputs" class="d-flex mb-3">
-                    <div class="d-flex flex-column text-start me-3">
+                    <div id="home-personal-details-inputs" class="d-flex flex-column text-start me-3">
                         <div class="mb-3 form-floating">
                             <input type="text" class="form-control" id="name">
                             <label for="name" class="form-label">Name</label>    
@@ -157,11 +157,11 @@
                             <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                         </div>    
                     </div>
-                    <div class="input-group ms-3">
+                    <div id="home-text-area-input" class="input-group ms-3">
                         <textarea class="form-control" aria-label="With textarea" placeholder="Enter your message here..."></textarea>
                     </div>
                 </div>
-               <button type="submit" class="btn btn-primary">Submit</button>
+               <button type="submit" class="btn btn-primary">Send</button>
             </form>
         </section>
 
