--- a/about.html
+++ b/about.html
@@ -83,52 +83,53 @@
                 <a href="#home-about-section"><i class="bi bi-chevron-double-down"></i></a>
             </div>
         </section>
-        <h3 id="about-page-text" class="pt-5 text-center pb-5 offset-md-3 offset-1 col-10 col-md-6">
-            Just north of Dublin, Swords combines historic charm with modern energy. Explore Swords Castle, scenic
-            parks, and vibrant local culture—an ideal gateway to North County Dublin.
-        </h3>
-        <div class="row justify-content-center">
-            <div class="d-flex justify-content-center col-9 col-md-4 mb-5">
-                <div class="about-card card bg-dark text-white">
-                    <img src="assets/images/thumbnail-placeholder-.jpg" class="card-img" alt="...">
-                    <div class="card-img-overlay">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                        <p class="card-text">Last updated 3 mins ago</p>
+        <section>
+            <h3 id="about-page-text" class="pt-5 text-center pb-5 offset-md-3 offset-1 col-10 col-md-6">
+                Just north of Dublin, Swords combines historic charm with modern energy. Explore Swords Castle, scenic
+                parks, and vibrant local culture—an ideal gateway to North County Dublin.
+            </h3>
+            <div class="row justify-content-center">
+                <div class="d-flex justify-content-center col-9 col-md-4 mb-5">
+                    <div class="about-card card bg-dark text-white">
+                        <img src="assets/images/thumbnail-placeholder-.jpg" class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">Last updated 3 mins ago</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center col-9 col-md-4 mb-5">
+                    <div class="about-card card bg-dark text-white">
+                        <img src="assets/images/thumbnail-placeholder-.jpg" class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">Last updated 3 mins ago</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center col-9 col-md-4 mb-5">
+                    <div class="about-card card bg-dark text-white">
+                        <img src="assets/images/thumbnail-placeholder-.jpg" class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">Last updated 3 mins ago</p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="d-flex justify-content-center col-9 col-md-4 mb-5">
-                <div class="about-card card bg-dark text-white">
-                    <img src="assets/images/thumbnail-placeholder-.jpg" class="card-img" alt="...">
-                    <div class="card-img-overlay">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                        <p class="card-text">Last updated 3 mins ago</p>
-                    </div>
-                </div>
-            </div>
-            <div class="d-flex justify-content-center col-9 col-md-4 mb-5">
-                <div class="about-card card bg-dark text-white">
-                    <img src="assets/images/thumbnail-placeholder-.jpg" class="card-img" alt="...">
-                    <div class="card-img-overlay">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                        <p class="card-text">Last updated 3 mins ago</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
+        </section>
 
         <section>
             <div class="d-flex justify-content-center">
                 <h1>A heading about Swords</h1>
             </div>
-            
+
             <h3 id="about-page-text" class="pt-5 text-center pb-5 offset-md-1.5 offset-1 col-10 col-md-9">
                 Over the past century, Swords has evolved from a small village with medieval roots into one of Ireland’s
                 fastest-growing urban areas. Once a modest rural settlement, Swords began expanding in the 20th century,
@@ -149,12 +150,25 @@
     </main>
 
     <footer class="container-fluid">
-        <p>&copy; <span id="year"></span> Swords Tourism</p>
+        <div>
+            &copy; <span id="year"></span> Swords Tourism
+        </div>
+        <div>
+            <ul id="social-links">
+                <li><i class="bi bi-instagram"></i></li>
+                <li><i class="bi bi-twitter"></i></li>
+                <li><i class="bi bi-facebook"></i></li>
+            </ul>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     <script src="assets/js/script.js"></script>
 </body>
 
