--- a/history.html
+++ b/history.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -68,16 +69,97 @@
     </nav>
 
     <main>
-
         <!-----------Hero Section-->
         <section id="hero-section" class="container-fluid">
             <img id="hero-image" src="hero-placeholder.jpg" alt="">
         </section>
 
+        <section id="home-about-section" class="text-center">
+            <h1 id="home-about-heading">Historic Swords</h1>
+            <p id="home-about-p" class="offset-md-3 offset-1 col-10 col-md-6 mt-3">
+                Swords beckons with a rich blend of historic charm and vibrant modern life. Known for its historic
+                features, Swords Castle stands proudly as a testament to the town’s medieval past, offering glimpses
+                into Ireland's Norman heritage. Nearby, historic landmarks and scenic parks paint a picture of life
+                through the centuries, while local markets and contemporary eateries keep the town buzzing with
+                activity. A perfect blend of old and new, Swords is a must-visit for history buffs and adventurers
+                looking to experience the heart of North County Dublin.
+            </p>
+        </section>
+
+        <section>
+            <div class="row" data-aos="fade-right">
+                <div class="col-md-4">
+                    <img class="history-image" src="assets/images/thumbnail-placeholder-.jpg" alt="">
+                </div>
+
+                <div class="history-paragraph col-md-8">
+                    <h2>
+                        Swords Castle
+                    </h2>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium corporis ratione ab numquam
+                        similique ea, perspiciatis eum assumenda dignissimos, asperiores voluptate, quia quibusdam
+                        suscipit eligendi iste. Voluptate qui vitae numquam?
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Animi veritatis eligendi voluptatum explicabo quis provident sint obcaecati
+                        fugiat modi expedita maxime eaque corporis quam sapiente officiis, ratione ad labore porro?
+                    </p>
+                </div>
+            </div>
+            <div class="row" data-aos="fade-left">
+                <div class="history-paragraph col-md-8">
+                    <h2>
+                        Round Tower Heading
+                    </h2>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium corporis ratione ab numquam
+                        similique ea, perspiciatis eum assumenda dignissimos, asperiores voluptate, quia quibusdam
+                        suscipit eligendi iste. Voluptate qui vitae numquam?
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Animi veritatis eligendi voluptatum explicabo quis provident sint obcaecati
+                        fugiat modi expedita maxime eaque corporis quam sapiente officiis, ratione ad labore porro?
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <img class="history-image" src="assets/images/thumbnail-placeholder-.jpg" alt="">
+                </div>
+            </div>
+            <div class="row" data-aos="fade-right">
+                <div class="col-md-4">
+                    <img class="history-image" src="assets/images/thumbnail-placeholder-.jpg" alt="">
+                </div>
+
+                <div class="history-paragraph col-md-8">
+                    <h2>
+                        Another historical feature
+                    </h2>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium corporis ratione ab numquam
+                        similique ea, perspiciatis eum assumenda dignissimos, asperiores voluptate, quia quibusdam
+                        suscipit eligendi iste. Voluptate qui vitae numquam?
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Animi veritatis eligendi voluptatum explicabo quis provident sint obcaecati
+                        fugiat modi expedita maxime eaque corporis quam sapiente officiis, ratione ad labore porro?
+                    </p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="container-fluid">
-        <p>&copy; <span id="year"></span> Swords Tourism</p>
+        <div>
+            &copy; <span id="year"></span> Swords Tourism
+        </div>
+        <div>
+            <ul id="social-links">
+                <li><i class="bi bi-instagram"></i></li>
+                <li><i class="bi bi-twitter"></i></li>
+                <li><i class="bi bi-facebook"></i></li>
+            </ul>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
