--- a/contact.html
+++ b/contact.html
@@ -11,67 +11,108 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
-<!--Nav-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid row">
-        <a class="navbar-brand col-3" href="index.html">Logo</a>
-        <button class="navbar-toggler" id="collapse-button" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse row" id="navbarTogglerDemo02">
-            <ul id="nav-list" class="navbar-nav mb-2 mb-lg-0 col-6">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="history.html">History</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="shopping.html">Shopping</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="contact.html">Contact</a>
-                </li>
-            </ul>
-            <div id="nav-basket" class="col-3">
-                <i class="bi bi-basket2-fill" data-bs-toggle="modal" data-bs-target="#exampleModal"></i>
-            </div>
 
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            ...
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Save changes</button>
+<body>
+    <!--Nav-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid row">
+            <a class="navbar-brand col-3" href="index.html">Logo</a>
+            <button class="navbar-toggler" id="collapse-button" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse row" id="navbarTogglerDemo02">
+                <ul id="nav-list" class="navbar-nav mb-2 mb-lg-0 col-6">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="history.html">History</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="shopping.html">Shopping</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+                <div id="nav-basket" class="col-3">
+                    <i class="bi bi-basket2-fill" data-bs-toggle="modal" data-bs-target="#exampleModal"></i>
+                </div>
+
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                ...
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Save changes</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</nav>
+    </nav>
 
-<main>
+    <main>
+        <section>
+            <div id="contact-headings" class="d-flex align-items-center flex-column">
+                <p>SWORDS TOURIST BOARD</p>
+                <h1>CONTACT US</h1>
+            </div>
+            <div class="row">
+                <div class="col-md-6 d-flex flex-column align-items-center mb-5">
+                    <h3>Online Enquiry</h3>
+                    <form>
+                        <div class="mb-3">
+                            <div>
+                                <div class="mb-3 form-floating">
+                                    <input type="text" class="form-control" id="name">
+                                    <label for="name" class="form-label">Name</label>    
+                                </div>
+                                <div class="mb-3 form-floating">
+                                    <input type="tel" class="form-control" id="phone">
+                                    <label for="phone" class="form-label">Phone Number</label>
+                                </div>
+                                <div class="mb-3 form-floating">
+                                    <input type="email" class="form-control" id="e-mail"
+                                        aria-describedby="emailHelp">
+                                    <label for="exampleInputEmail1" class="form-label">Email address</label> 
+                                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                                </div>    
+                            </div>
+                            <div id="home-text-area-input" class="input-group mb-3">
+                                <textarea class="form-control" aria-label="With textarea" placeholder="Enter your message here..."></textarea>
+                            </div>
+                       <button type="submit" class="btn btn-primary">Send</button>
+                       </div>
+                    </form>
+                </div>
+                <div class="col-md-6">
+                    <div class="col-md-6 d-flex flex-column align-items-center mb-5">
+                        <h3>Contact Details</h3>
+                </div>
+            </div>
 
-</main>
+        </section>
+    </main>
 
-<footer class="container-fluid">
-    <p>&copy; <span id="year"></span> Swords Tourism</p>
-</footer>
+    <footer class="container-fluid">
+        <p>&copy; <span id="year"></span> Swords Tourism</p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
