finish styling contact details

--- a/contact.html
+++ b/contact.html
@@ -81,31 +81,46 @@
                             <div>
                                 <div class="mb-3 form-floating">
                                     <input type="text" class="form-control" id="name">
-                                    <label for="name" class="form-label">Name</label>    
+                                    <label for="name" class="form-label">Name</label>
                                 </div>
                                 <div class="mb-3 form-floating">
                                     <input type="tel" class="form-control" id="phone">
                                     <label for="phone" class="form-label">Phone Number</label>
                                 </div>
                                 <div class="mb-3 form-floating">
-                                    <input type="email" class="form-control" id="e-mail"
-                                        aria-describedby="emailHelp">
-                                    <label for="exampleInputEmail1" class="form-label">Email address</label> 
-                                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                                </div>    
+                                    <input type="email" class="form-control" id="e-mail" aria-describedby="emailHelp">
+                                    <label for="exampleInputEmail1" class="form-label">Email address</label>
+                                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.
+                                    </div>
+                                </div>
                             </div>
                             <div id="home-text-area-input" class="input-group mb-3">
-                                <textarea class="form-control" aria-label="With textarea" placeholder="Enter your message here..."></textarea>
+                                <textarea class="form-control" aria-label="With textarea"
+                                    placeholder="Enter your message here..."></textarea>
                             </div>
-                       <button type="submit" class="btn btn-primary">Send</button>
-                       </div>
+                            <button type="submit" class="btn btn-primary">Send</button>
+                        </div>
                     </form>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 mb-5 d-flex flex-column align-items-center">
                     <div class="col-md-6 d-flex flex-column align-items-center mb-5">
                         <h3>Contact Details</h3>
+                    </div>
+                    <div id="contact-details" class="d-flex flex-column justify-content-between">
+                        <div class="mb-5">
+                            <p class="contact-details-p d-flex justify-content-between mb-2"><i class="bi bi-telephone-fill"></i> <span>+353 86 255 5555</span></p>
+                            <p class="contact-details-p d-flex justify-content-between mb-2"><i class="bi bi-envelope-fill"></i> <span>contact@swordstourism.ie</span></p>
+                        </div>             
+                        <div>
+                            <p class="contact-details-p text-center"><i class="bi bi-geo-alt-fill"></i></p>
+                            <p class="contact-details-p text-center">Fingal County Council</p>
+                            <p class="contact-details-p text-center">Main Street, Swords</p>
+                            <p class="contact-details-p text-center">County Dublin</p>
+                            <p class="contact-details-p text-center">K67 X8Y2</p>
+                        </div>
+                        
+                    </div>
                 </div>
-            </div>
 
         </section>
     </main>
